# FlatBot_Driver

./: README.md
flat_bot_driver/: CMakeLists.txt  package.xml
flat_bot_driver/config/: robot_planning.rviz
flat_bot_driver/launch/: test_robot.launch
flat_bot_driver/src/: driver_node.cpp  driver_node.h
flat_bot_moveit/: .setup_assistant  CMakeLists.txt  package.xml
flat_bot_moveit/config/: arm_controller.yaml  controllers.yaml  fake_controllers.yaml  flat_bot.srdf  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_control.yaml  ros_control.yaml.backup
flat_bot_moveit/launch/: default_warehouse_db.launch  demo.launch  empty_world.launch  fake_moveit_controller_manager.launch.xml  flat_bot_gazebo.launch  flat_bot_gazebo2.launch  flat_bot_moveit_controller_manager.launch.xml  move_group.launch  move_group_gazebo.launch  moveit.rviz  moveit_planning_execution.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
flat_bot_msgs/: CMakeLists.txt  package.xml
flat_bot_msgs/action/: ActuateConnector  ActuateConnector.action
flat_bot_msgs/msg/: ConnectorStatus.msg  ModuleStatus.msg
flat_bot_msgs/src/: demo_action_client.cpp  demo_module_action_server.cpp
flat_bot_msgs/srv/: SetStatus.srv
flat_bot_support/: CMakeLists.txt  package.xml
flat_bot_support/config/: latch_controllers.yaml
flat_bot_support/launch/: load_flat_bot.launch
flat_bot_support/meshes/: latch_physics.ods  link a.ods  link b.ods  sirom link a.ods  sirom link b.ods
flat_bot_support/meshes/collision/: arm_link_a_collision.stl  arm_link_b_collision.stl  sirom_latch_collision.stl  sirom_link_a_collision.stl  sirom_link_b_collision.stl
flat_bot_support/meshes/visual/: Link_A.dae  Link_A.stl  Link_B.dae  Link_B.stl  Sirom_Link.dae  Sirom_Link_2.dae  arm_link_a.stl  arm_link_b.stl  sirom_latch_visual.stl  sirom_link_a.stl  sirom_link_b.stl  test_1.dae
flat_bot_support/urdf/: flat_bot.xacro  flat_bot_macro (copy).xacro  flat_bot_macro.xacro  passive_sirom.xacro  passive_sirom_macro.xacro
pub_sub/: CMakeLists.txt  package.xml
pub_sub/src/: listener.cpp  talker.cpp  talker.h  udp_server.cpp  udp_server.h
